@@ -145,6 +145,8 @@ WIDGET_DEFAULT = {
         "bar_padding_vertical": 0.3,
         "bar_width": 50,
         "bar_gap": 2,
+        "horizontal_gap": 2,
+        "vertical_gap": 2,
         "font_color": "#AAAAAA",
         "highlight_color": "#00AAFF",
         "bkg_color": "#222222",
@@ -1557,6 +1559,8 @@ WIDGET_DEFAULT = {
         "bar_padding_vertical": 0.3,
         "bar_width": 50,
         "bar_gap": 2,
+        "horizontal_gap": 2,
+        "vertical_gap": 2,
         "font_color": "#AAAAAA",
         "highlight_color": "#44CC00",
         "bkg_color": "#222222",
@@ -1750,6 +1754,8 @@ WIDGET_DEFAULT = {
         "bar_padding_vertical": 0.3,
         "bar_width": 50,
         "bar_gap": 2,
+        "horizontal_gap": 2,
+        "vertical_gap": 2,
         "font_color": "#AAAAAA",
         "optimal_slip_ratio_color": "#FFFFFF",
         "critical_slip_ratio_color": "#FF00FF",
@@ -2058,6 +2064,8 @@ WIDGET_DEFAULT = {
         "bar_padding_vertical": 0.3,
         "bar_width": 50,
         "bar_gap": 2,
+        "horizontal_gap": 2,
+        "vertical_gap": 2,
         "font_color": "#AAAAAA",
         "highlight_color": "#CC00CC",
         "bkg_color": "#222222",
@@ -2083,6 +2091,8 @@ WIDGET_DEFAULT = {
         "bar_padding_vertical": 0.3,
         "bar_width": 50,
         "bar_gap": 2,
+        "horizontal_gap": 2,
+        "vertical_gap": 2,
         "font_color": "#AAAAAA",
         "positive_position_color": "#FFAA00",
         "negative_position_color": "#FF2200",
@@ -2416,6 +2426,8 @@ WIDGET_DEFAULT = {
         "bar_padding_vertical": 0.3,
         "bar_width": 50,
         "bar_gap": 2,
+        "horizontal_gap": 2,
+        "vertical_gap": 2,
         "font_color": "#AAAAAA",
         "highlight_color": "#FFFFFF",
         "bkg_color": "#222222",
